--- a/css/styles.css
+++ b/css/styles.css
@@ -1153,6 +1153,35 @@ img {
 
   }
 
+  .footer {
+    padding: 100px 0;
+  }
+
+  .footer-container {
+    flex-wrap: nowrap;
+    gap: 0;
+  }
+
+  .footer-logo-container {
+    margin-right: 120px;
+    padding: 0;
+    min-width: 264px;
+  }
 
 
+  .footer-container-social {
+    max-width: 208px;
+    margin-right: 80px;
+  }
+
+  .footer-form-container {
+    display: block;
+    margin: 0 auto;
+  }
+
+  .footer-form-subscribe {}
+
+  .footer-form-subscribe-btn {
+    width: 100%;
+  }
 }
