--- a/css/styles.css
+++ b/css/styles.css
@@ -69,7 +69,7 @@ img {
 
 
 
-/* --------------------1158px----------------- */
+
 /* --------------------HEADER----------------- */
 
 .header {
@@ -83,6 +83,8 @@ img {
 .header-container {
   display: flex;
   align-items: center;
+  margin: 0 auto;
+  padding: 16px 15px;
 }
 
 /* .header-container-portfolio {
@@ -121,8 +123,7 @@ img {
 }
 
 .navigation-list {
-  display: flex;
-  gap: 40px;
+  display: none;
 }
 
 
@@ -176,19 +177,121 @@ img {
 }
 
 .adress {
+  display: none;
   font-style: normal;
   margin-left: auto;
 }
 
 
+/* ---------------Menu btn---------------- */
+
+.menu-open-btn {
+  width: 40px;
+  height: 40px;
+  background-color: transparent;
+  border: none;
+  display: block;
+  margin-left: auto;
+}
+
+.menu-open-icon {
+  stroke: var(--Dark);
+}
+
+.mob-menu {
+  position: fixed;
+  top: 0;
+  z-index: 1;
+  width: 100vw;
+  height: 100vh;
+  background-color: #ffffff;
+  padding: 24px 24px 40px 40px;
+  display: flex;
+  flex-direction: column;
+  overflow: auto;
+  justify-content: space-between;
+}
+
+.menu-close-btn {
+  width: 24px;
+  height: 24px;
+  background-color: #E7E9FC;
+  border: 1px solid #2E2F42;
+  border-radius: 50%;
+  padding: 0;
+  display: block;
+  margin-left: auto;
+  align-items: center;
+  justify-content: center;
+}
+
+.mob-navigation-list {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  padding-top: 32px;
+
+}
+
+.mob-nav-link {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: var(--Text);
+
+}
+
+
+.mob-adress-nav {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  margin-bottom: 48px;
+
+}
+
+.mob-adress-list {
+  color: var(--Text);
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+
+}
+
+.mob-adress-list-mail {
+  color: var(--Text);
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+}
+
+.mob-team-social-list {
+  display: flex;
+  justify-content: space-between;
+}
+
 /*--------- Hero ----------*/
 
 .background {
-  background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/images-main/background-img.jpg);
+  background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/images-main/bg-img-mob-1x.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 }
+
+@media (min-device-pixel-ratio: 2),
+(min-resolution: 192dpi),
+(min-resolution: 2dppx) {
+  .background {
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/images-main/bg-img-mob-2x.jpg);
+  }
+}
+
 
 .hero {
   margin: 0 auto;
@@ -263,8 +366,6 @@ img {
 
   gap: 72px;
 }
-
-.benefits-item {}
 
 
 .benefits-title {
@@ -584,8 +685,6 @@ img {
 }
 
 
-
-.footer-form-sucscribe-field {}
 
 .footer-form-input {
   width: 100%;
@@ -963,7 +1062,6 @@ img {
   gap: 4px;
 }
 
-.modal-form {}
 
 .modal-form-submit {
   align-self: center;
@@ -1082,6 +1180,58 @@ img {
     flex-direction: row;
     gap: 24px;
   }
+
+
+  .background {
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/images-main/bg-img-tablet-1x.jpg);
+
+  }
+
+  @media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+    .background {
+      background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/images-main/bg-img-tablet-2x.jpg);
+    }
+  }
+
+  .adress {
+    display: block;
+  }
+
+  .navigation-list {
+    display: flex;
+    gap: 40px;
+  }
+
+  .mob-menu {
+    display: none;
+  }
+
+  .menu-open-btn {
+    display: none;
+  }
+
+  .header-container {
+    display: flex;
+    padding: 0 15px;
+  }
+
+  .adress-list {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+  }
+
+
+  .adress-nav {
+    flex-direction: column;
+    gap: 12px;
+  }
+
+  .logo {
+    margin-right: 120px;
+  }
 }
 
 
@@ -1179,9 +1329,34 @@ img {
     margin: 0 auto;
   }
 
-  .footer-form-subscribe {}
-
   .footer-form-subscribe-btn {
     width: 100%;
+  }
+
+  .background {
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/images-main/bg-img-desktop-1x.jpg);
+  }
+
+  @media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+    .background {
+      background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/images-main/bg-img-desktop-2x.jpg);
+    }
+  }
+
+  .adress-nav {
+    flex-direction: row;
+    gap: 40px;
+  }
+
+  .logo {
+    margin-right: 76px;
+  }
+
+  .adress-list {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
   }
 }
