--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,8 @@ body {
   background-color: #ffffff;
   color: #434455;
   margin: 0px;
+
+
 }
 
 :root {
@@ -208,7 +210,7 @@ img {
   padding: 24px 24px 40px 40px;
   display: flex;
   flex-direction: column;
-  overflow: auto;
+  overflow: hidden;
   justify-content: space-between;
 }
 
