--- a/css/styles.css
+++ b/css/styles.css
@@ -217,14 +217,16 @@ img {
 .menu-close-btn {
   width: 24px;
   height: 24px;
-  background-color: #E7E9FC;
-  border: 1px solid #2E2F42;
+  background-color: transparent;
+  border: 1px solid #E7E9FC;
+  /* opacity: 0.1; */
   border-radius: 50%;
   padding: 0;
   display: block;
   margin-left: auto;
   align-items: center;
   justify-content: center;
+
 }
 
 .mob-navigation-list {
