--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ img {
   width: 100%;
   padding-left: 15px;
   padding-right: 15px;
-  outline: 1px solid red;
+  /* outline: 1px solid red; */
 }
 
 
